security-k8s-kyverno/custom-deployment-team-label-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: "my-nginx"
    team: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "my-nginx"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "my-nginx"
    spec:
      containers:
      - image: nginx
        name: nginx
