security-k8s-kyverno/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: "my-nginx"  # Add the required label
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "my-nginx"  # Add the required label
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "my-nginx"  # Add the required label
    spec:
      containers:
      - image: nginx
        name: nginx
